objects/BoxWebhookNotification__c.object
<CustomObject>
    <description>To hold webhook post from box</description>
    <fields>
        <fullName>Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check once the notification has been processed</description>
        <label>Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebhookDate__c</fullName>
        <label>WebhookDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WebhookId__c</fullName>
        <label>WebhookId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebhookSourceId__c</fullName>
        <label>WebhookSourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebhookSourceParentId__c</fullName>
        <label>WebhookSourceParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebhookSourceType__c</fullName>
        <label>WebhookSourceType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebhookTrigger__c</fullName>
        <label>WebhookTrigger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BoxWebhookNotification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoxWebhookNotifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>